# dashdown-island-heat

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: pages.yml
dashboard/: .gitignore  README.md  dashdown.yaml  sources.yaml
dashboard/components/HexMap/: HexMap.css  HexMap.js  HexMap.py
dashboard/pages/: heat-map.md  index.md  ml-insights.md  priorities.md
dashboard/pages/cities/: [city_id].md  index.md
site/: index.html
site/_dashdown/: search-index.json
site/_dashdown/data/heat/: cities.json  cities_dir.json  feat_imp__ghent-belgium-18942c0b08.json  feat_imp__ljubljana-slovenia-48895635f0.json  kpis.json  kpis__ljubljana-slovenia-48895635f0.json  lst_map.json  lst_map__ghent-belgium-18942c0b08.json  lst_map__ljubljana-slovenia-48895635f0.json  lst_vs_ndvi__ghent-belgium-18942c0b08.json  lst_vs_ndvi__ljubljana-slovenia-48895635f0.json  max_cooling.json  metrics.json  (+19 more)
site/_dashdown/static/: app.js  core.js  dashdown.css  dashdown.js  embed.js  legacy.js  loading.js  store.js
site/cities/: index.html
site/cities/ghent-belgium/: index.html
site/cities/ljubljana-slovenia/: index.html
site/heat-map/: index.html
site/ml-insights/: index.html
site/priorities/: index.html
src/heat_island/: __init__.py  boundary.py  cli.py  config.py  db.py  demographics.py  features.py  hexgrid.py  model.py  osm_features.py  satellite.py  simulate.py  util.py  viz.py
tests/: synth.py  test_boundary_unit.py  test_db.py  test_demographics.py  test_hexgrid.py  test_model.py  test_osm_unit.py  test_satellite_unit.py  test_simulate.py
(+36 files in other folders)
