[project]
name = "heat-island"
version = "0.2.0"
description = "Urban heat island mapper: satellite land-surface temperature + ML tree-planting priorities for any city in the world, served as a Dashdown dashboard"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Dirend AI" }]
keywords = ["urban-heat-island", "landsat", "sentinel-2", "h3", "duckdb", "dashdown"]

dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "geopandas>=1.0",
    "shapely>=2.0",
    "pyproj>=3.6",
    "osmnx>=2.0",
    "h3>=4.1",
    "pystac-client>=0.8",
    "planetary-computer>=1.0",
    "odc-stac>=0.3.10",
    "rioxarray>=0.17",
    "xarray>=2024.6",
    "dask[array]>=2024.6",
    "numpy>=1.26,<2.3",
    "numba>=0.59",
    "pandas>=2.1",
    "pyarrow>=15",
    "lightgbm>=4.3",
    "scikit-learn>=1.4",
    "shap>=0.46",
    "duckdb>=1.0",
    "matplotlib>=3.8",
    "tenacity>=8.2",
    "requests>=2.31",
]

[project.scripts]
heat-island = "heat_island.cli:app"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heat_island"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py311"
